--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,43 @@
-altair==5.3.0
-annotated-types==0.7.0
-anyio==4.4.0
-attrs==23.2.0
-beautifulsoup4==4.12.3
+altair==5.4.1
+attrs==24.2.0
 blinker==1.8.2
-cachetools==5.4.0
-certifi==2024.7.4
+beautifulsoup4
+cachetools==5.5.0
+certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
-distro==1.9.0
+colorama==0.4.6
 gitdb==4.0.11
 GitPython==3.1.43
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
+idna==3.10
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-numpy==2.0.1
-openai==1.37.0
+narwhals==1.9.1
+numpy==2.1.1
 packaging==24.1
-pandas==2.2.2
+pandas==2.2.3
 pillow==10.4.0
-protobuf==5.27.2
+protobuf==5.28.2
 pyarrow==17.0.0
-pydantic==2.8.2
-pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.1
+pytz==2024.2
 referencing==0.35.1
 requests==2.32.3
-rich==13.7.1
-rpds-py==0.19.1
+rich==13.9.2
+rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-streamlit==1.36.0
-tenacity==8.5.0
+streamlit==1.39.0
+tenacity==9.0.0
 toml==0.10.2
-toolz==0.12.1
 tornado==6.4.1
-tqdm==4.66.4
 typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==5.0.3
